syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.chb.examples.lib";
option java_outer_classname = "ControllerProto";

service Controller {
  rpc StreamingFitAndController (stream RequestController) returns (stream ResponseController) {
  }
}

message RequestController{
  string address = 1;
  int64 var = 2;
}

message ResponseController{
  string message = 1;
}

message MemoryValuePollution{
  string address = 1;
  int64 var = 2;
}